[package]
name = "toucHNews"
version = "0.2.1"
authors = ["Trevor Bentley <mrmekon@gmail.com>"]
description = "Hacker News (YCombinator) news feed for the Mac Touch Bar"
keywords = ["news", "hackernews", "touchbar", "mac", "osx"]
homepage = "https://github.com/mrmekon/toucHNews"
repository = "https://github.com/mrmekon/toucHNews"
license = "Apache-2.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'

[dependencies]
rubrail = "0.4"
hn = "0.2"
objc = "0.2"
open = "1.2"
log = {version = "0.3", optional = true }

[package.metadata.release]
sign-commit = false
upload-doc = false
pre-release-commit-message = "Release {{version}}"
dev-version-ext = "rc"
tag-message = "Release {{version}}"
doc-commit-message = "Release {{version}}"
