[package]
name = "toucHNews"
version = "0.4.1-rc"
authors = ["Trevor Bentley <mrmekon@gmail.com>"]
description = "Hacker News (YCombinator) news feed for the Mac Touch Bar"
keywords = ["news", "hackernews", "touchbar", "mac", "osx"]
homepage = "https://github.com/mrmekon/toucHNews"
repository = "https://github.com/mrmekon/toucHNews"
license = "Apache-2.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'

[dependencies]
rubrail = "0.7"
hn = "0.4"
open = "1.2"
log = {version = "0.4", optional = true }

[dependencies.fruitbasket]
version = "0.6"
features = ["logging"]

[package.metadata.release]
sign-commit = false
upload-doc = false
pre-release-commit-message = "Release {{version}}"
dev-version-ext = "rc"
tag-message = "Release {{version}}"
doc-commit-message = "Release {{version}}"
